Functional Yenns returns non direct paths and multiple paths